// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > should render 1`] = `
<DocumentFragment>
  <div
    class="relative inline-flex h-10 w-10 items-center justify-center rounded align-middle transition-all duration-100 ring-theme-background ring-0 shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with custom shadow color 1`] = `
<DocumentFragment>
  <div
    class="relative inline-flex h-10 w-10 items-center justify-center rounded align-middle transition-all duration-100 ring-0 ring-theme-black shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with highlight 1`] = `
<DocumentFragment>
  <div
    class="relative inline-flex h-10 w-10 items-center justify-center rounded align-middle transition-all duration-100 ring-theme-background ring-0 shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle ring-theme-primary-200 dark:ring-theme-primary-600 ring-2 rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with highlight and custom shadow color 1`] = `
<DocumentFragment>
  <div
    class="relative inline-flex h-10 w-10 items-center justify-center rounded align-middle transition-all duration-100 ring-0 ring-theme-black shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle ring-theme-primary-200 dark:ring-theme-primary-600 ring-2 rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 1`] = `
<DocumentFragment>
  <div
    class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-5 w-5 text-sm ring-theme-background ring-0 shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 2`] = `
<DocumentFragment>
  <div
    class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-8 w-8 text-sm ring-theme-background ring-0 shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 3`] = `
<DocumentFragment>
  <div
    class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-6 w-6 text-xs ring-theme-background ring-0 shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 4`] = `
<DocumentFragment>
  <div
    class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-11 w-11 text-sm ring-theme-background ring-0 shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 5`] = `
<DocumentFragment>
  <div
    class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-16 w-16 text-xl ring-theme-background ring-0 shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render without shadow 1`] = `
<DocumentFragment>
  <div
    class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-11 w-11 text-sm shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;
